<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
android:name="com.example.featherfind3.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.featherfind3.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/activity_save_bird_observation" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.featherfind3.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/activity_about_us" />
    <fragment
        android:id="@+id/navigation_education"
        android:name="com.example.featherfind3.ui.EducationFragment"
        android:label="education"
        tools:layout="@layout/activity_feather_ed" />
    <fragment
        android:id="@+id/navigation_avian"
        android:name="com.example.featherfind3.ui.AvianFragment"
        android:label="education"
        tools:layout="@layout/activity_bird" />
</navigation>