<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="188dp"
            android:layout_height="176dp"
            android:layout_marginLeft="110dp"
            android:src="@drawable/feather"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="-2dp" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="4dp"

            android:layout_marginLeft="15dp"
            android:layout_marginTop="180dp"
            android:text="@string/already_a_featherfind_member"
            android:textColor="@color/navy"
            android:textSize="18dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="188dp" />

        <Button
            android:id="@+id/regLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="310dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="21dp"
            android:layout_toEndOf="@+id/textView"
            android:backgroundTint="@color/light_blue"
            android:text="@string/login"
            android:textColor="@color/navy"
            android:textStyle="bold"
            android:onClick="loginScreen"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="220dp"
            android:fontFamily="@font/chewy"
            android:text="@string/sign_up"
            android:textColor="@color/light_blue"
            android:textSize="40dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/FirstName"
            android:layout_width="190dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="285dp"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@+id/Surname"
            android:background="@drawable/textborder"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColorHint="@color/navy" />

        <EditText
            android:id="@+id/Surname"
            android:layout_width="190dp"
            android:layout_height="53dp"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="212dp"
            android:layout_marginTop="285dp"
            android:layout_marginEnd="9dp"
            android:background="@drawable/textborder"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColorHint="@color/navy" />

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="392dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="415dp"
            android:layout_marginEnd="9dp"
            android:background="@drawable/textborder"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColorHint="@color/navy" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="392dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="9dp"
            android:background="@drawable/textborder"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:textColorHint="@color/navy" />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="392dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="480dp"
            android:layout_marginEnd="9dp"
            android:background="@drawable/textborder"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColorHint="@color/navy" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/regSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginStart="143dp"
                android:layout_marginLeft="162dp"
                android:layout_marginTop="550dp"
                android:layout_marginEnd="140dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/sign_up2"
                android:textColor="@color/navy"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"



                android:gravity="center"
                android:layout_marginStart="195dp"
                android:layout_marginTop="620dp"

                android:text="OR"
                android:textAlignment="center"
                android:textColor="@color/navy"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/regGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"



                android:layout_marginLeft="105dp"
                android:layout_marginTop="12dp"
                :backgroundTint="@color/light_blue"
                android:minHeight="48dp"
                android:text="@string/sign_up_with_google"
                android:textColor="@color/navy"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

        </RelativeLayout>
        <!-- <ImageView
             android:id="@+id/imageView2"
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:src="@drawable/googlee"
             android:layout_marginLeft="60dp"
             android:layout_marginTop="650dp"
             /> -->





    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>